Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-92232

[REG] Option Clicking Window Close Button Crashes App

    XMLWordPrintable

Details

    • macOS
    • 8a4e274dcf836f58c7417c11737bdded50a84dbd (qt/qtbase/dev) 0f63509353c2ff1df3b38f31f9a7b966e1deff2b (qt/qtbase/6.1) ce35a72f527e0c5797726a4647507ca30de89589 (qt/qtbase/6.2) 8a12edd8e801bad0f91c07704265795a6ccd2004 (qt/tqtc-qtbase/5.15)

    Description

      macOS lets you close all your windows by holding the Option key while clicking the red window button in the titlebar.  This crashes apps built with Qt 5.15, but it worked fine with 5.9.6.  You can reproduce it with Qt Creator 4.14.2 by opening a second window as shown in the attached movie using Split > Open in New Window.  Also attaching the macos crash report to see the callstack.  Crashes on Catalina and BigSur.

      Attachments

        1. bigsur-report.txt
          100 kB
        2. crash.mov
          1.70 MB
        3. example.mov
          2.85 MB
        4. example-crash.txt
          60 kB
        5. macos-report.txt
          81 kB
        6. QTBUG-92232.zip
          28 kB
        For Gerrit Dashboard: QTBUG-92232
        # Subject Branch Project Status CR V

        Activity

          People

            vestbo Tor Arne Vestbø
            remik Remik Ziemlinski
            Veli-Pekka Heinonen Veli-Pekka Heinonen
            Votes:
            4 Vote for this issue
            Watchers:
            8 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: